Fixed margin and padding issue causing page to be too wide (you could scroll horizontally)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -68,6 +68,10 @@ aside {
   padding: 0;
 }
 
+.no-margin {
+  margin: 0;
+}
+
 // Navigation
 
 .navbar-default {
